--- a/IS335Django/IS335django/IS335APP/templates/app/rideDetails.html
+++ b/IS335Django/IS335django/IS335APP/templates/app/rideDetails.html
@@ -184,12 +184,14 @@
   <div class="container">
     <header>
       <h1>Ride Details</h1>
-      <button class="back-btn" onclick="window.location.href='/main'">
+      <button class="back-btn" onclick="window.location.href='/rideDetails/?back_to_main=true'">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M19 12H5M12 19l-7-7 7-7"/>
         </svg>
         Back to Main
-      </button>
+    </button>
+    
+      
     </header>
 
     <div class="map-section">
