--- a/IS335Django/IS335django/IS335APP/templates/app/profile.html
+++ b/IS335Django/IS335django/IS335APP/templates/app/profile.html
@@ -218,12 +218,12 @@
             
             <div class="profile-group">
                 <label class="profile-label">Name</label>
-                <div class="profile-value" id="name-display">John Doe</div>
+                <div class="profile-value" id="name-display">name</div>
             </div>
             
             <div class="profile-group">
                 <label class="profile-label">Phone Number</label>
-                <div class="profile-value" id="phone-display">123-456-7890</div>
+                <div class="profile-value" id="phone-display">05********</div>
             </div>
             
             <div class="profile-group">
@@ -276,8 +276,8 @@
 
         // Initial data (would typically come from a database)
         let userData = {
-            name: "John Doe",
-            phone: "123-456-7890",
+            name: "",
+            phone: "",
             password: "securePassword123"
         };
 
